# team_09_dml_group_project

./: .gitignore  Dockerfile  Dockerfile.train  README.md  docker-compose.yml  dvc.yaml  folder-structure.md  main.py  notes  params.yaml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  ci_cd.yml
data/processed/: city_day_processed.csv  current_batch.csv
data/raw/: .gitignore  city_day.csv.dvc
flows/: pipelines.py
mlruns/0/: meta.yaml
mlruns/139694557214330258/: meta.yaml
mlruns/139694557214330258/eed76e66212843c2b4fea9f99a602020/: meta.yaml
mlruns/139694557214330258/eed76e66212843c2b4fea9f99a602020/metrics/: mae  r2_score
mlruns/139694557214330258/eed76e66212843c2b4fea9f99a602020/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/139694557214330258/models/m-5ec6a3b8891d4f36824c0dff614e9aef/: meta.yaml
mlruns/969087784643282432/: meta.yaml
mlruns/969087784643282432/1bad1d3a30b8494ebc11c7e9a0d82515/: meta.yaml
mlruns/969087784643282432/5aaabf0c1c96479ca651cea239f14b83/: meta.yaml
mlruns/969087784643282432/a1573626448044fbb1d5b9fcd63f5ea6/: meta.yaml
mlruns/969087784643282432/b506d83e46f9416f97929e2b06190514/: meta.yaml
mlruns/models/AQI_Predictor/: meta.yaml
mlruns/models/AQI_Predictor/version-1/: meta.yaml
models/: model.pkl
notebooks/: eda.py
service/: Dockerfile
src/: data_prep.py  monitor.py  predict.py  train_model.py
src/api/: app.py
src/data/: preprocess.py
src/models/: forecast.py  train.py
src/monitoring/: evidently_report.py
src/prefect/: flow.py
tests/: test_api.py  test_monitoring.py
(+30 files in other folders)
